--- a/public/index.css
+++ b/public/index.css
@@ -3,15 +3,6 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-
     user-select: none;
     -webkit-user-select: none;
 }
@@ -24,6 +15,8 @@
 
 #root {
     display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
     overflow: hidden;
 }
